# Focus

./: .gitignore  CMakeLists.txt
qml/: Configuration.qml  Main.qml  Param.qml  TimerPage.qml
src/: main.cpp
src/domain/: PomodoroTimer.cpp  PomodoroTimer.h
src/utils/: casters.cpp  casters.h
src/viewmodels/: timerviewmodel.cpp  timerviewmodel.h
